<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/iv_background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/background_image_of_the_app"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_app"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view_overlay"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/mesa12_background_overlay"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scroll_content"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:overScrollMode="never"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/spacing_extra_large"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/spacing_extra_large">

            <TextView
                android:id="@+id/tv_match"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/matches"
                android:textColor="@color/mesa12_text_primary"
                android:textSize="@dimen/text_size_large"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/tv_numberOfMatches"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/tv_numberOfMatches"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_small"
                android:text="@string/_0"
                android:textColor="@color/mesa12_gold"
                android:textSize="@dimen/text_size_large"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/tv_match"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_match"
                app:layout_constraintTop_toTopOf="@+id/tv_match" />

            <LinearLayout
                android:id="@+id/container_leader_match"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_medium"
                android:gravity="center"
                android:orientation="horizontal"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@+id/tv_match"
                tools:visibility="visible"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:contentDescription="@string/ic_lider_of_the_match"
                    app:srcCompat="@drawable/ic_lider_match" />

                <TextView
                    android:id="@+id/tv_lider_match"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/spacing_small"
                    android:textColor="@color/mesa12_gold"
                    android:textSize="@dimen/text_size_tiny"
                    android:textStyle="italic"
                    tools:text="O Jogador continua na liderança!" />
            </LinearLayout>

            <include
                android:id="@+id/player1Section"
                layout="@layout/view_player_section"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_small"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/container_leader_match" />

            <include
                android:id="@+id/player2Section"
                layout="@layout/view_player_section"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_large"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/player1Section" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_setNamePlayers"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_huge"
                android:backgroundTint="@color/mesa12_button"
                android:minHeight="@dimen/button_min_height"
                android:text="@string/btn_set_name_players"
                android:textColor="@color/mesa12_button_text"
                android:textStyle="bold"
                app:cornerRadius="@dimen/button_corner_radius"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/player2Section"
                app:layout_constraintWidth_max="@dimen/button_max_width" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_historicOfMatches"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_medium"
                android:layout_marginEnd="@dimen/spacing_small"
                android:backgroundTint="@color/mesa12_card"
                android:minHeight="@dimen/button_min_height"
                android:text="@string/btn_historic_matches"
                android:textColor="@color/mesa12_card_text"
                android:textStyle="bold"
                app:cornerRadius="@dimen/button_corner_radius"
                app:layout_constraintEnd_toStartOf="@+id/btn_clean_historic"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_setNamePlayers"
                app:strokeColor="@color/mesa12_green_light"
                app:strokeWidth="1dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_clean_historic"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="184dp"
                android:layout_height="54dp"
                android:layout_marginStart="@dimen/spacing_small"
                android:layout_marginTop="@dimen/spacing_medium"
                android:backgroundTint="@color/mesa12_card"
                android:minHeight="@dimen/button_min_height"
                android:text="@string/btn_clean_historic"
                android:textColor="@color/mesa12_card_text"
                android:textStyle="bold"
                app:cornerRadius="@dimen/button_corner_radius"
                app:layout_constraintBottom_toBottomOf="@+id/btn_historicOfMatches"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btn_historicOfMatches"
                app:layout_constraintTop_toTopOf="@+id/btn_historicOfMatches"
                app:layout_constraintVertical_bias="1.0"
                app:strokeColor="@color/mesa12_green_light"
                app:strokeWidth="1dp" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
