<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainSetName"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SetNamePlayersActivity">

    <ImageView
        android:id="@+id/iv_background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/background_image_of_the_app"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_app"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view_overlay"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/mesa12_background_overlay"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container_fields"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_horizontal_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_set_names"
            android:textColor="@color/mesa12_text_primary"
            android:textSize="@dimen/text_size_large"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_player1"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_extra_large"
            android:hint="@string/hint_player_1"
            android:textColorHint="@color/mesa12_text_muted"
            app:boxStrokeColor="@color/mesa12_green_light"
            app:hintTextColor="@color/mesa12_green_light"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_player1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:textColor="@color/mesa12_text_primary" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_player2"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:hint="@string/hint_player_2"
            android:textColorHint="@color/mesa12_text_muted"
            app:boxStrokeColor="@color/mesa12_green_light"
            app:hintTextColor="@color/mesa12_green_light"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_player1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_player2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:textColor="@color/mesa12_text_primary" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_save"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_extra_large"
            android:backgroundTint="@color/mesa12_button"
            android:minHeight="@dimen/button_min_height"
            android:text="@string/btn_save"
            android:textColor="@color/mesa12_button_text"
            android:textStyle="bold"
            app:cornerRadius="@dimen/button_corner_radius"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_player2"
            app:layout_constraintWidth_max="@dimen/button_max_width" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>