<resources>
    <string name="app_name">Mesa 12</string>
    <string name="icon_of_the_player">Icon of the player</string>
    <string name="player_label">Player</string>
    <string name="player_name">Player name</string>
    <string name="icon_of_the_second_player">Icon of the second player</string>
    <string name="matches">Matches</string>
    <string name="_0">0</string>
    <string name="truco_3">Truco +3</string>
    <string name="truco_6">Truco +6</string>
    <string name="truco_9">Truco +9</string>
    <string name="truco_12">Truco +12</string>
    <string name="_1">+1</string>
    <string name="order">%s</string>
    <string name="btn_historic_matches">Historic of Matches</string>
    <string name="btn_clean_historic">Clean Historic</string>
    <string name="btn_set_name_players">Set Name Players</string>
    <string name="background_image_of_the_app">Background Image of the app</string>
    <string name="title_set_names">Set Player Names</string>
    <string name="hint_player_1">Player 1 Name</string>
    <string name="hint_player_2">Player 2 Name</string>
    <string name="btn_save">Save Names</string>
    <string name="title_historic">Match History</string>
    <string name="wins_label">Wins: %s</string>
    <string name="btn_back">Back</string>
    <string name="player_1_default">Player 1</string>
    <string name="player_2_default">Player 2</string>
    <string name="ic_lider_of_the_match">Icon lider of the match</string>
    <string name="leader_message">%s está na liderança!</string>
    <string name="tied_match">A partida está empatada!</string>
</resources>